# InsightForge

./: .gitignore  .insightforge.toml  .insightforge.toml.example  PROJECT_CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/insightforge/: __init__.py  analyzer.py  cli.py  config.py  default_config.py  diffing.py  migrations.py  models.py  policy.py  providers.py  redaction.py  renderer.py  store.py  updater.py  verifier.py
tests/: test_production_mvp.py
